View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025539 | Open CASCADE | OCCT:Visualization | public | 2014-12-01 09:51 | 2016-01-30 18:27 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025539: Visualization, TKOpenGl - support environmental texture within built-in GLSL programs | ||||
Description | To provide complete replacement to FFP, built-in GLSL programs should support environment textures and texture transformation matrix. | ||||
Steps To Reproduce | pload ALL vinit View1 vcaps -ffp off vsetdispmode 1 psphere S1 5 vdisplay S1 vfit vtextureenv on 5 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
related to | 0025304 | closed | bugmaster | Visualization, TKOpenGl - support texturing within built-in GLSL programs |
related to | 0027123 | closed | bugmaster | Visualization, TKOpenGl - fix environment texture GLSL program |
child of | 0025146 | closed | bugmaster | Porting to Android |
child of | 0025282 | closed | bugmaster | Visualization, OpenGl_PrimitiveArray - provide built-in GLSL programs as alternative to FFP |
|
Branch CR25539 has been created by dbp. SHA-1: 9da23cc48d07aad27949ceca9cbfdf06215fceae Detailed log of new commits: Author: dbp Date: Wed Jan 14 18:58:43 2015 +0300 0025539: Visualization, TKOpenGl - support environmental texture within built-in GLSL programs |
|
Dear kgv, please review the patch in branch CR25539. |
|
Branch CR25539_1 has been created by dbp. SHA-1: 4dcc5ecb4f88faf3634d1cc996c15193a0d1ba3f No new revisions were added by this update. |
|
Branch CR25539_1 has been updated by dbp. SHA-1: 93cf35f7c25babe7fe6de9c74fb39dae2b746a4b Detailed log of new commits: Author: dbp Date: Thu Mar 19 18:43:59 2015 +0300 0025539: Visualization, TKOpenGl - support environmental texture within built-in GLSL programs |
|
Please test the patch. |
|
Branch CR25539_1 has been updated forcibly by mkv. SHA-1: 4b68e08317103a73c13b874976aa8f2016b08584 |
|
Dear BugMaster, Branch CR25539_1 was rebased on current master of occt git-repository. |
|
Dear BugMaster, Branch CR25539_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 4b68e08317103a73c13b874976aa8f2016b08584 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 4 (4 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 88707859 / 88552987 [+0.17%] Total CPU difference: 54050.02000000026 / 53186.43000000024 [+1.62%] products component : Total MEMORY difference: 23120549 / 23198252 [-0.33%] Total CPU difference: 15900.49999999999 / 16301.109999999973 [-2.46%] Testing on Windows: occt component : Total MEMORY difference: 57332266 / 56590852 [+1.31%] Total CPU difference: 48169.984375 / 15117.136504099708 [+218.64%] products component : Total MEMORY difference: 15077574 / 15023928 [+0.36%] Total CPU difference: 16024.34375 / 5841.473045099963 [+174.32%] There are following differences in images found by testdiff. http://occt-tests/CR25539-1-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html IMAGE caf presentation K1: K1.png differs IMAGE caf presentation H1: H1.png differs IMAGE caf presentation I1: I1.png differs IMAGE caf presentation G1: G1.png differs IMAGE caf presentation J1: J1.png differs |
|
Dear bugmaster, The following differences are not a problem. They are caused by specifics of testing system (and probably can change from time to time): IMAGE caf presentation K1: K1.png differs IMAGE caf presentation H1: H1.png differs IMAGE caf presentation I1: I1.png differs IMAGE caf presentation G1: G1.png differs IMAGE caf presentation J1: J1.png differs |
|
Dear bugmaster, please switch this bug to "tested". |
|
Branch CR25539 has been deleted by kgv. SHA-1: 9da23cc48d07aad27949ceca9cbfdf06215fceae |
|
Branch CR25539_1 has been deleted by kgv. SHA-1: 4b68e08317103a73c13b874976aa8f2016b08584 |
occt: master e135a155 2015-03-19 15:43:59
Committer: bugmaster Details Diff |
0025539: Visualization, TKOpenGl - support environmental texture within built-in GLSL programs |
Affected Issues 0025539 |
|
mod - src/OpenGl/OpenGl_SetOfShaderPrograms.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderManager.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderManager.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderProgram.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderStates.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_View_2.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-12-01 09:51 | kgv | New Issue | |
2014-12-01 09:51 | kgv | Assigned To | => kgv |
2014-12-01 09:52 | kgv | Relationship added | child of 0025146 |
2014-12-01 09:52 | kgv | Relationship added | related to 0025304 |
2014-12-01 09:52 | kgv | Relationship added | child of 0025282 |
2015-01-13 11:46 | kgv | Assigned To | kgv => dbp |
2015-01-13 11:46 | kgv | Status | new => assigned |
2015-01-14 18:59 | git | Note Added: 0036072 | |
2015-01-14 19:00 |
|
Note Added: 0036073 | |
2015-01-14 19:00 |
|
Assigned To | dbp => kgv |
2015-01-14 19:00 |
|
Status | assigned => feedback |
2015-03-19 18:42 | git | Note Added: 0038703 | |
2015-03-19 18:44 | git | Note Added: 0038704 | |
2015-03-19 18:44 |
|
Status | feedback => resolved |
2015-03-19 18:44 |
|
Steps to Reproduce Updated | |
2015-03-19 20:54 | kgv | Note Added: 0038707 | |
2015-03-19 20:54 | kgv | Assigned To | kgv => bugmaster |
2015-03-19 20:54 | kgv | Status | resolved => reviewed |
2015-03-19 20:54 | kgv | Target Version | 7.1.0 => 6.9.0 |
2015-03-20 14:27 |
|
Assigned To | bugmaster => mkv |
2015-03-20 15:47 | git | Note Added: 0038746 | |
2015-03-23 18:38 |
|
Note Added: 0038803 | |
2015-03-23 18:39 |
|
Note Added: 0038804 | |
2015-03-23 18:39 |
|
Assigned To | mkv => dbp |
2015-03-23 18:39 |
|
Status | reviewed => feedback |
2015-03-23 18:39 |
|
Test case number | => Not needed |
2015-03-26 17:38 |
|
Note Added: 0038927 | |
2015-03-26 17:38 |
|
Assigned To | dbp => bugmaster |
2015-03-26 17:38 |
|
Status | feedback => resolved |
2015-03-26 17:38 |
|
Steps to Reproduce Updated | |
2015-03-26 18:02 | kgv | Status | resolved => feedback |
2015-03-30 15:47 | kgv | Note Added: 0038988 | |
2015-04-02 18:01 | bugmaster | Status | feedback => tested |
2015-04-07 16:08 | bugmaster | Changeset attached | => occt master e135a155 |
2015-04-07 16:08 | bugmaster | Status | tested => verified |
2015-04-07 16:08 | bugmaster | Resolution | open => fixed |
2015-04-09 09:39 | git | Note Added: 0039430 | |
2015-04-09 09:48 | git | Note Added: 0039440 | |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |
2016-01-30 18:27 | kgv | Relationship added | related to 0027123 |