0025539: Visualization, TKOpenGl - support environmental texture within built-in GLSL programs